fix nav-bar button alignment

--- a/layout/headers/banner/nav-bar/_grid.scss
+++ b/layout/headers/banner/nav-bar/_grid.scss
@@ -1,3 +1,8 @@
+.wrapper {
+  @extend %container;
+  width: 100%;
+}
+
 .nav-bar {
   ul {
     @include span-columns(12);
